--- a/assignment1/atemp1/Menu.css
+++ b/assignment1/atemp1/Menu.css
@@ -1,5 +1,5 @@
 * {
-	font-size:50px; font-family: sans-serif;
+	font-family: sans-serif;
 	box-sizing: border-box;
 }
 
@@ -16,11 +16,12 @@ h1{
 	}
 		.menu-item {
 		width:100%;
-		height: 500px;
+		height: 100px;
 		overflow: hidden;
 	}
 	.title {
-		width:200px;
+		font-weight: bold;
+		width:80px;
 		float:right;
 		text-align: center;
 	}
